--- a/pedalboard.html
+++ b/pedalboard.html
@@ -74,7 +74,7 @@
   <div id="page-content">
 
     <div id="pedalAddDropdownContainer"></div>
-      <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px;">
+      <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px; justify-content: space-between; width: 100%;">
         <select id="pedalboardSelect"></select>
         <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit
           <svg
