--- a/pedalboard.html
+++ b/pedalboard.html
@@ -74,7 +74,7 @@
   <div id="page-content">
 
     <div id="pedalAddDropdownContainer"></div>
-      <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px; justify-content: space-between; width: 100%;">
+      <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px; width: 100%;">
         <select id="pedalboardSelect"></select>
         <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit
           <svg
@@ -90,7 +90,7 @@
             <path d="M3,10V22a2.002,2.002,0,0,0,2,2H27a2.0023,2.0023,0,0,0,2-2V10a2.0027,2.0027,0,0,0-2-2H5A2.0023,2.0023,0,0,0,3,10Zm2,0,2,0V22H5ZM27,22H9V10H27Z"/>
           </svg>   
         </button>   
-        <a id="viewPreset" href="preset" class="showDesktop bx--btn bx--btn--primary" type="button">View Presets
+        <a id="viewPreset" href="preset" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto;">View Presets
           <svg
             focusable="false"
             preserveAspectRatio="xMidYMid meet"
