--- a/preset.html
+++ b/preset.html
@@ -85,7 +85,7 @@
       </button>
 
       <!-- Preset selection -->
-      <div id="presetSelectContainer" style="margin-left: 8px; width: 100%;">
+      <div id="presetSelectContainer" style="margin-left: 8px;">
         <select id="presetSelect"></select>
         <div id="presetSelectLoader" class="bx--inline-loading" style="display:none;" aria-live="assertive" role="alert">
           <div class="bx--inline-loading__animation">
