--- a/pedalboard.html
+++ b/pedalboard.html
@@ -248,7 +248,7 @@
           localStorage.removeItem('authToken');
 
           Swal.fire({
-            title: 'Sessione scaduta',
+            title: 'Session expired',
             text: 'Your session is expired. Do you want to Login again or continue as a Guest?',
             icon: 'warning',
             showDenyButton: true,
