--- a/preset.html
+++ b/preset.html
@@ -105,7 +105,7 @@
         </svg>
       </button>
 
-      <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important;">Back to Pedalboard
+      <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important;">Back to Pedalboards
         <svg
           focusable="false"
           preserveAspectRatio="xMidYMid meet"
@@ -228,7 +228,7 @@ $(document).ready(function() {
 
         // Swal2 con scelta Login / Continua come ospite
         Swal.fire({
-          title: 'Sessione scaduta',
+          title: 'Session expired',
           text: 'Your session is expired. Do you want to Login again or continue as a Guest?',
           icon: 'warning',
           showDenyButton: true,
