update: no apostrophes

--- a/preset.html
+++ b/preset.html
@@ -105,7 +105,7 @@
         </svg>
       </button>
 
-      <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important;">Back to Pedalboards
+      <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Pedalboards
         <svg
           focusable="false"
           preserveAspectRatio="xMidYMid meet"
