changed folder name policies

--- a/catalog.html
+++ b/catalog.html
@@ -81,7 +81,7 @@
             title: 'Session expired',
             text: 'Your session is expired. Do you want to Login again or continue as a Guest?',
             icon: 'warning',
-            showCancelButton: true,
+            showCancelButton: false,
             showDenyButton: true,
             confirmButtonText: 'Login',
             denyButtonText: 'Be our Guest',
