--- a/pedalboard.html
+++ b/pedalboard.html
@@ -118,6 +118,7 @@
     <script src="pedalboard.js"></script>
     <script src="fullscreen-menu.js"></script>
     <script src="nav-pedalboard.js"></script>
+    <script src="pedalboard-dnd.js"></script>
   </div>
 
     <div class="zoom-controls">  
