--- a/pedalboard.html
+++ b/pedalboard.html
@@ -49,16 +49,12 @@
 
 
 
-.drag-ghost {
-    opacity: 0.4;
-}
-
-.drag-chosen {
-    transform: scale(1.05);
-}
-
-.drag-active {
-    cursor: grabbing;
+.pedal-placeholder {
+    background: transparent;
+    border: 2px dashed #999;
+    border-radius: 6px;
+    width: 80px;
+    height: 120px;
 }
 
 
@@ -135,7 +131,6 @@
     <script src="pedalboard.js"></script>
     <script src="fullscreen-menu.js"></script>
     <script src="nav-pedalboard.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
     <script src="pedalboard-dnd.js"></script>
   </div>
 
