--- a/pedalboard.html
+++ b/pedalboard.html
@@ -78,6 +78,16 @@
   transform-origin: center center;
 }
 
+.pedalboard-dnd-placeholder {
+  box-sizing: border-box;
+  border: 3px dashed rgba(50,50,200,0.7);
+  border-radius: 8px;
+  background: rgba(50,50,200,0.1);
+  margin: 0 8px;
+  flex: 0 0 auto;
+  transition: height 100ms ease, width 100ms ease;
+}
+
 
 
   </style>
