test google login

--- a/login.html
+++ b/login.html
@@ -34,6 +34,33 @@
 
     <br>
 
+
+
+
+<div id="g_id_onload"
+     data-client_id="TUO_GOOGLE_CLIENT_ID"
+     data-context="signin"
+     data-ux_mode="popup"
+     data-callback="onGoogleLogin">
+</div>
+
+<div class="g_id_signin"
+     data-type="standard"
+     data-size="large"
+     data-theme="outline"
+     data-text="sign_in_with"
+     data-shape="rectangular"
+     data-logo_alignment="left">
+</div>
+
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+
+
+
+
+
+
+
     <!-- Submit Button -->
     <button type="submit" class="bx--btn bx--btn--primary" id="submitBtn" style="width: 100%;">Login</button>
   </form>
