added client_id google

--- a/profile.html
+++ b/profile.html
@@ -132,7 +132,7 @@
     // Google linking
     document.getElementById('linkGoogleBtn').addEventListener('click', () => {
       google.accounts.id.initialize({
-        client_id: 'TUO_CLIENT_ID_GOOGLE',
+        client_id: '760340498879-qkpjocfkd0204ihu0qdmaaegr5bdp6gj.apps.googleusercontent.com',
         callback: handleGoogleLink
       });
       google.accounts.id.prompt(); // mostra il popup
