--- a/login.html
+++ b/login.html
@@ -50,20 +50,22 @@
     </div> -->
     <br><br>or<br><br>
 
-    <div id="g_id_onload"
-     data-client_id="760340498879-qkpjocfkd0204ihu0qdmaaegr5bdp6gj.apps.googleusercontent.com"
-     data-context="signin"
-     data-ux_mode="popup"
-     data-callback="onGoogleLogin">
-    </div>
+    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 50px;">
+      <div id="g_id_onload"
+      data-client_id="760340498879-qkpjocfkd0204ihu0qdmaaegr5bdp6gj.apps.googleusercontent.com"
+      data-context="signin"
+      data-ux_mode="popup"
+      data-callback="onGoogleLogin">
+      </div>
 
-    <div class="g_id_signin"
-        data-type="standard"
-        data-size="large"
-        data-theme="outline"
-        data-text="sign_in_with"
-        data-shape="rectangular"
-        data-logo_alignment="left">
+      <div class="g_id_signin"
+          data-type="standard"
+          data-size="large"
+          data-theme="outline"
+          data-text="sign_in_with"
+          data-shape="rectangular"
+          data-logo_alignment="left">
+      </div>
     </div>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
