--- a/pedalboard.html
+++ b/pedalboard.html
@@ -53,11 +53,6 @@
       align-items: center;
       width: 100%;
     }
-    #guestSaveMsg {
-        margin: 0;
-        font-size: 14px;
-        font-weight: 500;
-    }
 
     /* Drag and drop style */
     .dnd-placeholder {
@@ -209,7 +204,7 @@
       // Guest mode
       $('#loadingMessage').hide();
       $('#page-content').show();
-      $('#pedalboard-controls').prepend('<p id="guestSaveMsg">Login to consistently save your Pedalboards!</p>');
+      $('#pedalboard-controls').prepend('<p>Login to consistently save your Pedalboards!</p>');
       $('#pedalboardSelect, #renameBoardBtn').hide();
       $('#zoomIn, #zoomOut, #zoomReset').prop('disabled', true).addClass('btn-disabled');
       window.currentUser = { role: 'guest', username: 'guest' };
