--- a/catalog.html
+++ b/catalog.html
@@ -27,26 +27,54 @@
 <body>
   
   <div id="page-content" style="display: none;">
-      <!-- <div id="categoryFilterContainer"> -->
-    <!-- <label for="categoryFilter">
-      Filter by category:
-    </label> -->
 
     <select id="categoryFilter">
       <option value="" disabled="">-- Select a category --</option>
       <option value="all">All</option>
-      <option value="distortion">Distortion</option>
-      <option value="overdrive">Overdrive</option>
-      <option value="fuzz">Fuzz</option>
-      <option value="delay">Delay</option>
-      <option value="reverb">Reverb</option>
+      <option value="acoustic">Acoustic</option>
+      <option value="ambient">Ambient</option>
+      <option value="boost">Boost</option>
+      <option value="buffer">Buffer</option>
       <option value="chorus">Chorus</option>
-      <option value="flanger">Flanger</option>
-      <option value="phaser">Phaser</option>
+      <option value="combo">Combo</option>
       <option value="compressor">Compressor</option>
-      <option value="eq">EQ</option>
+      <option value="delay">Delay</option>
+      <option value="dibox">DI Box</option>
+      <option value="distortion">Distortion</option>
+      <option value="echo">Echo</option>
+      <option value="eq">Equalizer</option>
+      <option value="expression">Expression</option>
+      <option value="feedbacker">Feedbacker</option>
+      <option value="filter">Filter</option>
+      <option value="flanger">Flanger</option>
+      <option value="fuzz">Fuzz</option>
+      <option value="head">Head</option>
+      <option value="irloader">IR Loader</option>
+      <option value="looper">Looper</option>
+      <option value="modulation">Modulation</option>
+      <option value="multifx">Multi FX</option>
+      <option value="noisegate">Noise Gate</option>
+      <option value="octaver">Octaver</option>
+      <option value="overdrive">Overdrive</option>
+      <option value="phaser">Phaser</option>
+      <option value="pitchshifter">Pitch Shifter</option>
+      <option value="preamp">Preamp</option>
+      <option value="reverb">Reverb</option>
+      <option value="rotary">Rotary</option>
+      <option value="sampler">Sampler</option>
+      <option value="spectrumenhancer">Spectrum Enhancer</option>
+      <option value="stack">Stack</option>
+      <option value="sustainer">Sustainer</option>
+      <option value="swell">Swell</option>
+      <option value="switcher">A/B Switcher</option>
+      <option value="synth">Synthesizer</option>
+      <option value="tremolo">Tremolo</option>
+      <option value="tuner">Tuner</option>
+      <option value="vibrato">Vibrato</option>
+      <option value="vocoder">Vocoder</option>
+      <option value="volume">Volume</option>
+      <option value="wah">Wah</option>
     </select>
-  <!-- </div> -->
 
     <div id="catalog"></div>
 
@@ -109,6 +137,7 @@
     }
   });
 });
+
 </script>
 
 
