--- a/catalog.html
+++ b/catalog.html
@@ -29,8 +29,6 @@
   <div id="page-content" style="display: none;">
 
     <select id="categoryFilter">
-      <option value="" disabled="">-- Select a category --</option>
-      <option value="all">All</option>
       <option value="acoustic">Acoustic</option>
       <option value="ambient">Ambient</option>
       <option value="boost">Boost</option>
@@ -38,18 +36,14 @@
       <option value="chorus">Chorus</option>
       <option value="combo">Combo</option>
       <option value="compressor">Compressor</option>
-      <option value="delay">Delay</option>
-      <option value="dibox">DI Box</option>
+      <option value="delay">Delay/Echo</option>
+      <option value="dibox">Dibox</option>
       <option value="distortion">Distortion</option>
-      <option value="echo">Echo</option>
-      <option value="eq">Equalizer</option>
+      <option value="eq">Eq</option>
       <option value="expression">Expression</option>
-      <option value="feedbacker">Feedbacker</option>
-      <option value="filter">Filter</option>
       <option value="flanger">Flanger</option>
-      <option value="fuzz">Fuzz</option>
+      <option value="fuzz">Fuzz/Muff</option>
       <option value="head">Head</option>
-      <option value="irloader">IR Loader</option>
       <option value="looper">Looper</option>
       <option value="modulation">Modulation</option>
       <option value="multifx">Multi FX</option>
@@ -58,21 +52,15 @@
       <option value="overdrive">Overdrive</option>
       <option value="phaser">Phaser</option>
       <option value="pitchshifter">Pitch Shifter</option>
-      <option value="preamp">Preamp</option>
-      <option value="reverb">Reverb</option>
-      <option value="rotary">Rotary</option>
-      <option value="sampler">Sampler</option>
-      <option value="spectrumenhancer">Spectrum Enhancer</option>
-      <option value="stack">Stack</option>
+      <option value="preamp">Preamp/IR Loader</option>
+      <option value="reverb">Reverb/Shimmer</option>
+      <option value="vibrato">Vibrato/Rotary</option>
       <option value="sustainer">Sustainer</option>
-      <option value="swell">Swell</option>
-      <option value="switcher">A/B Switcher</option>
-      <option value="synth">Synthesizer</option>
+      <option value="switcher">Switcher</option>
+      <option value="synth">Synth/Filter/Bit Crusher</option>
       <option value="tremolo">Tremolo</option>
       <option value="tuner">Tuner</option>
-      <option value="vibrato">Vibrato</option>
       <option value="vocoder">Vocoder</option>
-      <option value="volume">Volume</option>
       <option value="wah">Wah</option>
     </select>
 
