--- a/catalog.html
+++ b/catalog.html
@@ -32,34 +32,27 @@
       <option value="acoustic">Acoustic</option>
       <option value="ambient">Ambient</option>
       <option value="boost">Boost</option>
-      <option value="buffer">Buffer</option>
       <option value="chorus">Chorus</option>
       <option value="combo">Combo</option>
-      <option value="compressor">Compressor</option>
+      <option value="compressor">Compressor/Sustainer</option>
       <option value="delay">Delay/Echo</option>
-      <option value="dibox">Dibox</option>
-      <option value="distortion">Distortion</option>
-      <option value="eq">Eq</option>
-      <option value="expression">Expression</option>
+      <option value="distortion">Distortion/Overdrive</option>
+      <option value="eq">Equalizer</option>
+      <option value="expression">Expression/Volume/Swell</option>
       <option value="flanger">Flanger</option>
       <option value="fuzz">Fuzz/Muff</option>
       <option value="head">Head</option>
       <option value="looper">Looper</option>
       <option value="modulation">Modulation</option>
       <option value="multifx">Multi FX</option>
-      <option value="noisegate">Noise Gate</option>
       <option value="octaver">Octaver</option>
-      <option value="overdrive">Overdrive</option>
       <option value="phaser">Phaser</option>
       <option value="pitchshifter">Pitch Shifter</option>
       <option value="preamp">Preamp/IR Loader</option>
       <option value="reverb">Reverb/Shimmer</option>
-      <option value="vibrato">Vibrato/Rotary</option>
-      <option value="sustainer">Sustainer</option>
-      <option value="switcher">Switcher</option>
-      <option value="synth">Synth/Filter/Bit Crusher</option>
-      <option value="tremolo">Tremolo</option>
-      <option value="tuner">Tuner</option>
+      <option value="vibrato">Vibrato/Tremolo/Rotary</option>
+      <option value="synth">Synth/Sampler/Filter/Bit Crusher/Spectrum Enhancer</option>
+      <option value="utility">Utility/Buffer/Tuner/Switcher/DI/Noise Gate</option>
       <option value="vocoder">Vocoder</option>
       <option value="wah">Wah</option>
     </select>
