--- a/catalog.html
+++ b/catalog.html
@@ -29,19 +29,19 @@
   <div id="page-content" style="display: none;">
 
     <select id="categoryFilter">
+      <option value="all" selected>All categories</option>
       <option value="acoustic">Acoustic</option>
       <option value="ambient">Ambient</option>
+      <option value="ampli">Amplifier</option>
       <option value="boost">Boost</option>
       <option value="chorus">Chorus</option>
-      <option value="combo">Combo</option>
       <option value="compressor">Compressor/Sustainer</option>
       <option value="delay">Delay/Echo</option>
       <option value="distortion">Distortion/Overdrive</option>
-      <option value="eq">Equalizer</option>
+      <option value="eq">Equalizer/Filter</option>
       <option value="expression">Expression/Volume/Swell</option>
       <option value="flanger">Flanger</option>
       <option value="fuzz">Fuzz/Muff</option>
-      <option value="head">Head</option>
       <option value="looper">Looper</option>
       <option value="modulation">Modulation</option>
       <option value="multifx">Multi FX</option>
@@ -51,9 +51,9 @@
       <option value="preamp">Preamp/IR Loader</option>
       <option value="reverb">Reverb/Shimmer</option>
       <option value="vibrato">Vibrato/Tremolo/Rotary</option>
-      <option value="synth">Synth/Sampler/Filter/Bit Crusher/Spectrum Enhancer</option>
-      <option value="utility">Utility/Buffer/Tuner/Switcher/DI/Noise Gate</option>
-      <option value="vocoder">Vocoder</option>
+      <option value="synth">Synth/Sampler/Bit Crusher</option>
+      <option value="utility">Utility (Buffer/Tuner/DI/Noise Gate)</option>
+      <option value="vocoder">Vocoder/Talk Box</option>
       <option value="wah">Wah</option>
     </select>
 
