--- a/catalog.html
+++ b/catalog.html
@@ -38,6 +38,7 @@
       <option value="compressor">Compressor/Sustainer</option>
       <option value="delay">Delay/Echo</option>
       <option value="distortion">Distortion/Overdrive</option>
+      <option value="drup">Drum sequencer/Pad</option>
       <option value="eq">Equalizer/Filter</option>
       <option value="expression">Expression/Volume/Swell</option>
       <option value="flanger">Flanger</option>
