--- a/catalog.html
+++ b/catalog.html
@@ -58,6 +58,12 @@
       <option value="wah">Wah</option>
     </select>
 
+    <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Pedalboards
+      <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+        <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
+      </svg>   
+    </a>  
+
     <div id="catalog"></div>
 
     <!-- Load scripts after content is visible -->
