--- a/preset.html
+++ b/preset.html
@@ -106,16 +106,7 @@
       </button>
 
       <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Pedalboards
-        <svg
-          focusable="false"
-          preserveAspectRatio="xMidYMid meet"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor"
-          width="16"
-          height="16"
-          viewBox="0 0 32 32"
-          aria-hidden="true"
-          class="bx--btn__icon">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
         </svg>   
       </a>  
@@ -329,11 +320,6 @@ document.addEventListener('DOMContentLoaded', () => {
   CarbonComponents.watch();
 });
 </script>
-
-
-
-
-
 
 
 </body>
